exports[`<UserCenter /> user Info list toggle snapshot 1`] = `
<div
  className="user-center "
  onClick={[Function]}>
  <div
    className="user-icon clearfix">
    <span
      className="icon icon-usr" />
  </div>
  <ul
    className="user-list hidden">
    <li
      onClick={[Function]}>
      <span
        className="icon icon-alter" />
      修改密码
    </li>
    <li
      onClick={[Function]}>
      <span
        className="icon icon-exit" />
      退出管理系统
    </li>
  </ul>
</div>
`;

exports[`<UserCenter /> user Info list toggle snapshot 2`] = `
<div
  className="user-center "
  onClick={[Function]}>
  <div
    className="user-icon clearfix">
    <span
      className="icon icon-usr" />
  </div>
  <ul
    className="user-list ">
    <li
      onClick={[Function]}>
      <span
        className="icon icon-alter" />
      修改密码
    </li>
    <li
      onClick={[Function]}>
      <span
        className="icon icon-exit" />
      退出管理系统
    </li>
  </ul>
</div>
`;

exports[`<UserCenter /> user Info list toggle snapshot 3`] = `
<div
  className="user-center "
  onClick={[Function]}>
  <div
    className="user-icon clearfix">
    <span
      className="icon icon-usr" />
  </div>
  <ul
    className="user-list hidden">
    <li
      onClick={[Function]}>
      <span
        className="icon icon-alter" />
      修改密码
    </li>
    <li
      onClick={[Function]}>
      <span
        className="icon icon-exit" />
      退出管理系统
    </li>
  </ul>
</div>
`;
